# clox

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.wasm.build  Makefile  README.md  docker-compose.yaml
benchmarks/: loop-closure.lox  loop-simple.lox  loop.lox  simple.lox  strings.lox  trees.lox
examples/: arrays.lox  buffer.lox  classes.lox  closure.lox  eval.lox  fib.lox  funcs.lox  inheritance.lox  json.lox  objects.lox  rand.lox  resend-user-invites.lox  reverse-json-data-env.lox  reverse-json-data.lox  scan-input.lox  sleep.lox  strings.lox
modules/: clox.h
modules/filesystem/: Makefile  example.lox  filesystem.h  main.c
modules/lora_radio/: Makefile  example.lox  lib.lox  lora-module.cmake  lora.c  lora.h  rf_95.c  rf_95.h
modules/os/: Makefile  example.lox  main.c  os.h
modules/pico/: CMakeLists.txt  Makefile  clox-pico-w.c  clox-pico-w.h  clox-pico.h  example-http.lox  example-w.lox  example.lox  lib.lox  lwipopts.h  machine.c  machine.h  main.c  pico-module.cmake  pico.h
modules/pimoroni/: clox-pimoroni.h  lib.lox  main.cpp  pimoroni-module.cmake  pimoroni_pico_import.cmake
src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  modules.c  modules.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
src/jit/: cloxjit-a64.cpp  cloxjit.hpp  jit.cpp  jit.h
src/native/: native-array.c  native-buffer.c  native-string.c  native-utils.c  native.h
stdlib/: lib.lox
